form pages button alignment fixed

--- a/src/app/pages/schools/add-advance/add-advance.page.scss
+++ b/src/app/pages/schools/add-advance/add-advance.page.scss
@@ -59,16 +59,13 @@ ion-card {
     box-shadow: 0px 10px 25px rgba(0, 0, 0, 0.00);
   ion-grid {
     position: relative;
-    top: 50px;
+    top: 33px;
     ion-col {
       margin-bottom: 10px;
     }
   }
 }
-ion-grid{
-  position: relative;
-  top: 12px;
-}
+
 .add-advance ion-input {
   background: #f5f6f8;
   border-radius: 8px;
@@ -100,6 +97,7 @@ ion-button {
   border-radius: 12px;
   position: relative;
   // left: 33px;
+  color: #ffffff;
   top: 80px;
   text-transform: none;
   background-color: #4f8cff;
@@ -295,6 +293,10 @@ ion-button {
   display: block;
   line-height: 1.2;
 }
+.align-right-field{
+ position: relative;
+ left: 40px;
+}
 @media only screen and (min-width: 1600px) {
   .add-advance {
     width: 99%;
@@ -319,7 +321,7 @@ ion-button {
 
   ion-card {
     width: 105%;
-    height: 500px;
+    height: 440px;
   }
 
   ion-button {
@@ -350,7 +352,7 @@ ion-button {
   }
   ion-card {
     width: 107%;
-    height: 550px;
+    height: 440px;
   }
 
   .add-advance ion-input {
@@ -383,7 +385,7 @@ ion-button {
 
   ion-card {
     width: 108%;
-    height: 550px;
+    height: 440px;
 
     // right: 0;
     // top: 60px;
@@ -427,7 +429,7 @@ ion-button {
 
   ion-card {
     width: 107%;
-    height: 550px;
+    height: 440px;
 
     // right: 0;
     // top: 60px;
@@ -470,13 +472,16 @@ ion-button {
     margin-left: 20px;
     ion-icon {
     position: fixed;
-      right: 13%;
+      right: 14%;
       top: 48%;
     }
   }.danger {
     
    position:relative;
    left: 21px;
+  }
+  .align-right-field{
+    left: 0;
   }
 
   /* Card */
@@ -489,7 +494,7 @@ ion-button {
     // top: 30px;
     // right: 0;
       width: 100%;
-    height: 550px;
+    height: 515px;
     position: static;
     margin: 10px 0;
     margin-top: 30px;
@@ -556,10 +561,10 @@ ion-button {
     width: 100%;
     min-width: 200px;
     height: 48px;
-    margin-top: 16px;
+    margin-top: 2px;
     border-radius: 10px;
     font-size: 15px;
-    margin-right: 30px;
+    margin-left: 10px;
   }
 
   /* Remove extra spacing issue */
