--- a/src/app/pages/students-and-parents/student-profile/student-profile.page.scss
+++ b/src/app/pages/students-and-parents/student-profile/student-profile.page.scss
@@ -882,7 +882,7 @@ ion-datetime::part(confirm-button) {
   /* Outer container */
   .student-profile-container {
     width: 99%;
-    height: 3180px;
+    height: 3110px;
     // padding: 10px;
     background: #f2f2f2;
     padding: 8px 10px;
